--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mocha-mongoose": "^1.0.3",
     "mongodb": "2.1.7",
     "mongoose": "^4.10.8",
+    "natives": "^1.1.6",
     "nodemon": "^1.3.7",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
